--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <title>SITE | Title Here</title>
+  <title>Frontend Mentor | 3-column preview card</title>
 </head>
 
 <body>
@@ -21,13 +21,13 @@
        <div class="cta">
         <a href="#">Learn More</a>
       </div>
-      
+
     </article>
 
     <article class="suvs">
       <img src="./images/icon-suvs.svg" alt="Icone d'une voiture SUVs" aria-hidden="true">
       <h1>SUVs</h1>
-      <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip. </p>
+      <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
 
       <div class="cta">
         <a href="#">Learn More</a>
@@ -38,7 +38,7 @@
     <article class="luxury">
       <img src="./images/icon-luxury.svg" alt="Icone d'une voiture luxueuse" aria-hidden="true">
       <h1>Luxury</h1>
-      <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip. </p>
+      <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</p>
     
       <div class="cta">
         <a href="#">Learn More</a>
